# bt-classic-mqtt

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
devices/yamaha-yas-207/: README.md  model.yaml
docs/: airplay.md
scripts/: airplay-start.sh
src/bt_classic_mqtt/: bluetooth.py  controller.py  main.py  model.py  mqtt.py  yaml_model.py
tests/: test_protocol.py
